--- a/my_website/index.html
+++ b/my_website/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Home</title>
-  </head>
+  </head>This is Sarah's Home Page
   <body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
