--- a/my_website/index.html
+++ b/my_website/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Home</title>
-  </head>This is Sarah's Home Page
+    <title>Cheese Lair</title>
+  </head>
   <body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
-    <h1>This is my test Home Page!</h1>
+    <h1>This is Sarah's test Home Page!</h1>
     <img src="images/home.jpg" height="250">
   </body>
 </html>
