--- a/my_website/index.html
+++ b/my_website/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Cheese Lair</title>
+    <title>Cheese's lair</title>
   </head>
   <body>
     <a href="index.html">Home</a>
