--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -12,6 +12,7 @@
     <br>
     <a target="_blank" href="https://scratch.mit.edu">
       <img src="images/scratchlogo.png" height="100">
+      <a target "_blank" href="ai2.appinventor.mit.edu/?galleryId=5150239427919872"><img src= "images/compass.png" height="150"</a>
     </a>
     
 	  </body>
