linked about to other htmls

--- a/about.html
+++ b/about.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
     <body>
+        <a href="index.html">Home</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="about.html">About</a>
         <h1> About Sarah Mellor</h1>
         <img src="https://scontent-sea1-1.cdninstagram.com/t51.2885-19/s150x150/15624984_347950515590917_2724991122488164352_a.jpg" width="240" height="240" >
         
