--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <a href="portfolio.html">Portfolio</a>
         <a href="about.html">About</a>
         <h1> About Sarah Mellor</h1>
-        <img src="https://scontent-sea1-1.cdninstagram.com/t51.2885-19/s150x150/15624984_347950515590917_2724991122488164352_a.jpg" width="240" height="240" >
+        <img src="me.jpg" width="240" height="240" >
         
         <p> Hello, my name is Sarah Mellor and I want to die</p>
     </body>
