--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="about.html">About</a>
     <h1>This is Sarah's test Home Page!</h1>
+    <h1>This is Sarah's test Home Page!</h1>
     <img src="images/home.jpg" height="250">
   </body>
 </html>
